--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "babel": "npx babel ./nodeBasics/index.js --out-file ./dist/index.js --presets=@babel/preset-env,@babel/flow",
-    "start": "node ./dist/index.js",
-    "start:dev": "node ./nodeBasics/index.mjs",
+    "start": "node ./nodeBasics/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,10 +13,5 @@
   "dependencies": {
     "chalk": "^5.3.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-flow": "^7.24.1"
-  }
+  "devDependencies": {}
 }
