--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
+    "husky": "^9.0.11",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
